fixed "page jump" w/ overflow-y: scroll; small jQuery update

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     body {
       min-width: 316px;
       width: auto;
+      overflow-y:scroll;
       background-image: url(images/pebbles-dark-mobile.jpg);
       background-size: 60%;
       background-repeat: repeat;
@@ -26,6 +27,7 @@
       margin-bottom: 30px;  
       background-color: rgba(190,190,213,.6);
     }
+
 
     /*Video loop styling for CRT animations */
     .videoCRT{
@@ -117,10 +119,8 @@
 
     /* CSS Rule for each individual headers*/
     header div{
-      background: rgba(190,190,213,.7);
       margin-bottom: 10px;
       margin: 5px;
-      border: 2px solid #000000;
     }
   
    /*CSS rule for the container for the header navigation*/
@@ -560,9 +560,9 @@
   }
  
   .center-large:hover {
-    -ms-transform: scale(1.3); /* IE 9 */
-    -webkit-transform: scale(1.3); /* Safari 3-8 */
-     transform: scale(1.3); 
+    -ms-transform: scale(1.2); /* IE 9 */
+    -webkit-transform: scale(1.2); /* Safari 3-8 */
+     transform: scale(1.2); 
   }
 
   .item:hover {
@@ -637,5 +637,6 @@
     margin-left: 22%;
     margin-right: 22%;
   }
+
   
  }
